Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49019

Moving a text from a non-Retina to a Retina display does not update the text resolution when using FreeType

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • None
    • 5.5.0
    • None
    • MacOS, Retina Display
    • d870ea28656a2155c39a1aabefa1c56871a017e4

    Description

      When moving a Window containing a QML scene from a non-retina display to a retina display, the text resolutions is not updated and the text appears pixelated when Qt has been built with the FreeType option.

      We are building Qt with the following options:

      '-qt-freetype',
      '-D', 'QT_QUICK_DEFAULT_TEXT_RENDER_TYPE=NativeRendering',
      '-D', 'FT_CONFIG_OPTION_SUBPIXEL_RENDERING',
      '-D', 'TT_CONFIG_OPTION_BYTECODE_INTERPRETER'

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ahartmetz Andreas Hartmetz
            che Carsten Henßinger
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes