Rerender natively rendered text items when DPI scaling changes.

The whole purpose of native rendering is to optimize precisely for a
given pixel grid.

DPI scaling can change when either settings of the current screen are
changed, or when the window is moved to a different screen.

Details:
- add an ItemDevicePixelRatioHasChanged item change event
- detect DPI scaling changes by watching screen (identity) and screen
  config changes
- when DPI scaling changes, recursively send an
  ItemDevicePixelRatioHasChanged signal to all items with content
- when a natively renderet TextItem catches such an event, call
  updateLayout() which automatically picks up the new logical DPI

Task-number: QTBUG-49019
Change-Id: I9f4f8d1a7f2c172ed26c276294ab143161c4a48b
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@theqtcompany.com>